# flatish-trie

./: .gitignore  Cargo.toml  insert.html  trie_get.html  trie_insert_remove.html
benches/: trie_benches.rs
data/: small.txt
examples/: main.rs
flame/: Cargo.toml
flame/src/: main.rs
src/: key.rs  lib.rs  node.rs  noop_hash.rs
