[package]
name = "ecs-trie"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
edition = "2018"

[dependencies]
# fnv = "1.0"
# fasthash = "0.4"
# flame = "0.2.2"
# flamer = "0.3"

[dev-dependencies]
criterion = "0.3"
radix_trie = "0.1"


[[bench]]
name = "trie_benches"
harness = false

[lib]
bench = false

# [profile.release]
# debug = true
